--- a/public/style.css
+++ b/public/style.css
@@ -1,7 +1,92 @@
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-family: 'Roboto';
+}
+
+@font-face {
+    font-family: 'Roboto';
+    src: URL('Roboto/Roboto-Regular.ttf');
+}
+
+:root {
+    --light-background: #f9fcfb;
+    --light-highlight-low: #e98b97;
+    --light-highlight-med: #dd4f63;
+    --light-highlight-high: #644fb6;
+    --light-font: #000000;
+
+    --dark-background: #202225;
+    --dark-highlight-low: #e98b97;
+    --dark-highlight-med: #dd4f63;
+    --dark-highlight-high: #957bfc;
+    --dark-font: #f1f2e7;
+
+    --background: var(--dark-background);
+    --highlight-low: var(--dark-highlight-low);
+    --highlight-med: var(--dark-highlight-med);
+    --highlight-high: var(--dark-highlight-high);
+    --font: var(--dark-font);
+}
+
+body {
+    background-color: var(--background);
+    color: var(--font);
+}
+
 tr.current-week {
-    background-color: red;
+    background-color: var(--highlight-med);
 }
 
 td.current-day {
-    background-color: green;
+    background-color: var(--highlight-high);
+}
+
+#table-container {
+    display: flex;
+    padding: 20px;
+    margin-top: 30px;
+    align-items: center;
+    justify-content: center;
+    width: 100vw;
+}
+
+#table {
+    width: 100%;
+    height: 100%;
+    max-width: 1400px;
+    border: solid 2px var(--highlight-low);
+    border-radius: 5px;
+}
+
+table > tr {
+    padding: 5px;
+}
+
+th,
+td {
+    padding: 10px;
+}
+
+.hidden {
+    display: none;
+}
+
+button {
+    padding: 5px;
+    cursor: pointer;
+}
+
+#container {
+    display: flex;
+    align-items: flex-start;
+    flex-direction: column;
+    width: 100vw;
+}
+
+#ui-controls {
+    position: absolute;
+    right: 10px;
+    padding: 10px;
 }
